# ffxiii-bot

./: .cursorignore  .gitignore  README.md  check_keys.py  cleanup.py  debug_keys.py  debug_keys_detailed.py  hello.py  pyproject.toml
.cursor/plans/: hybrid_navigation_system_f9e75774.plan.md  hybrid_navigation_upgrade_(rotation_aware)_b6fc1f65.plan.md  hybrid_visual_odometry_navigation_47374eaf.plan.md
data/: routes.db
docs/: detection.md  gamepad-notes.md  minimap-template-matching.md  route-mapping.md  sensors.md
src/: __init__.py  controller.py  db.py  debug-controller.py  debug-sensors.py  debug-vision.py  main.py  vision.py
src/core/: __init__.py  manager.py  roi_cache.py
src/filters/: __init__.py  base.py  color.py  composite.py  edge.py  mask.py  registry.py
src/sensors/: __init__.py  base.py  compass.py  enemy_position.py  health.py  minimap.py  minimap_state.py  player_direction.py  registry.py
src/skills/: __init__.py  base.py  button.py  macro.py  movement.py
src/states/: __init__.py  base.py  battle.py  hostile_detected.py  manager.py  movement.py  movement.py.old  results.py  visual_navigator.py
src/states/movement/: __init__.py  constants.py  debug_visualizer.py  input_handler.py  movement_state.py  navigation_controller.py  route_manager.py  route_player.py  route_recorder.py  seek_strategy.py
src/states/movement/stitching/: __init__.py  bundle_adjustment.py  feature_extractor.py  feature_matcher.py  mesh_warping.py  (+1 more)
src/ui/: __init__.py  input_handler.py  menu.py  text_input.py
src/visualizers/: __init__.py  base.py  route.py
