[project]
name = "ffxii-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.1.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "opencv-contrib-python>=4.11.0.86",
    "pynput>=1.8.1",
    "pygame>=2.6.0",
    "vgamepad>=0.1.0",
    "torch>=2.0.0",
    "kornia>=0.7.0,<0.8.0",
    "scipy>=1.11.0",
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
]
